work on second page of blog, incomplete

--- a/pages/OAuth-weaknesses.html
+++ b/pages/OAuth-weaknesses.html
@@ -148,7 +148,7 @@
             Basically, if you can intercept this session cookie, you should be able to access the user's client 
             account in full.   
           </p>
-          <h3>My Coclusions</h3>
+          <h3>My Conclusions</h3>
           <p>
             The main thing that sticks out for me about MFA and OAuth is that when you increase the number 
             of steps to login to a user account, or when you do so (but abstract the details away from 
