--- a/pages/checkbox-input.html
+++ b/pages/checkbox-input.html
@@ -70,7 +70,26 @@
           <h5>Nov. 3<sup>rd</sup> 2022</u></h5>
           <div class="divider"></div>
         </div>
+        <section class="main-text">
+          <p>As a beginner HTML and CSS learner, you may have found yourself wondering how your content can become more dynamic, and more functional. You may want to control something like the popular “Switch to Dark Theme” mode or want to display a side-bar menu when you click on an icon, which is super common in mobile pages. </p>
+          <p>So let’s take a quick and easy stroll into the CSS and HTML that can help you make these cool features happen - Without any Javascript or fancy framework. </p>
+          <p>We are going to use the humble input type known as a “checkbox”. A checkbox has two states:
+          </p>
+          <ol>
+            <li>Checked</li>
+            <li>Unchecked</li>
+          </ol>
+          <p>We can link the state of the checkbox with another HTML element through the use of a “label” element type. </p>
+          <p>The basic syntax we are going to use in our HTML document is:
+          </p>
+          <p class="codepen" data-height="300" data-default-tab="html,result" data-slug-hash="MWXedVb" data-user="michael-vibert" style="height: 300px; box-sizing: border-box; display: flex; align-items: center; justify-content: center; border: 2px solid; margin: 1em 0; padding: 1em;">
+            <span>See the Pen <a href="https://codepen.io/michael-vibert/pen/MWXedVb">
+            Untitled</a> by michael-vibert (<a href="https://codepen.io/michael-vibert">@michael-vibert</a>)
+            on <a href="https://codepen.io">CodePen</a>.</span>
+          </p>
+          <script async src="https://cpwebassets.codepen.io/assets/embed/ei.js"></script>                                   
 
+        </section>
       </div>
       </main>
 <!-- footer begins here, include my socials and a copywrite -->
