created new blog post and finsished checkbox hack page

--- a/pages/OAuth-weaknesses.html
+++ b/pages/OAuth-weaknesses.html
@@ -71,7 +71,7 @@
         </div>
         <section class="paragraphs">
           <!-- image supplied https://infosecwriteups.com/oauth-2-0-hacking-simplified-part-1-understanding-basics-ad323cb4a05c -->
-          <img id="oath-infographic" src="../images/oath-graphic.jpeg" alt="infographic for oath">
+          <img class="main-img" src="../images/oath-graphic.jpeg" alt="infographic for oath">
           <h3>What is Oauth?</h3>
           <p>
             This is a popular authorisation protocol used by large corporations such as Facebook 
@@ -112,7 +112,7 @@
             </li>
           </ol>
           <!-- image supplied https://portswigger.net/web-security/oauth -->
-          <img id="oath-protocol-flow" src="../images/oath-protocol.png" alt="image depicting the oath protocol">
+          <img class="secondary-img" src="../images/oath-protocol.png" alt="image depicting the oath protocol">
           
           <p>There are several pieces of data that are transmitted during the Oauth protocol:</p>
           <ol>
@@ -174,25 +174,25 @@
       </div>
       </main>
 <!-- footer begins here, include my socials and a copywrite -->
-    <footer>
-      <div class="social-links">
-        <div>
-          <a href="/"><i class="fa fa-twitter fa-lg"></i></a>
+      <footer>
+        <div class="social-links">
+          <div>
+            <a href="https://twitter.com/vibert_michael"><i class="fa fa-twitter fa-lg"></i></a>
+          </div>
+          <div>
+            <a href="https://github.com/michael-vibert"><i class="fa fa-github fa-lg"></i></a>
+          </div>
+          <div>
+            <a href="https://www.linkedin.com/in/michael-vibert-192b7713a/"><i class="fa fa-linkedin fa-lg"></i></a>
+          </div>
+          <div>
+            <a href="mailto:13815@coderacademy.edu.au"><i class="fa fa-envelope fa-lg"></i></a>
+          </div>
         </div>
-        <div>
-          <a href="/"><i class="fa fa-github fa-lg"></i></a>
-        </div>
-        <div>
-          <a href="/"><i class="fa fa-linkedin fa-lg"></i></a>
-        </div>
-        <div>
-          <a href="/"><i class="fa fa-facebook-f fa-lg"></i></a>
-        </div>
-      </div>
-      <p>
-        MIKE VIBERT &copy <span style="color: #8D0B0B">2022</span>
-      </p>
-    </footer>   
+        <p>
+          MIKE VIBERT &copy <time style="color: #8D0B0B">2022</time>
+        </p>
+      </footer>  
   </body>
 </html>
 <!-- End of html document -->
