--- a/pages/contact.html
+++ b/pages/contact.html
@@ -85,6 +85,7 @@
               <textarea id="message-input" placeholder="Write me a message :)"></textarea>
               <button type="submit">Submit</button>
             </div>
+            
           </form>
   <!-- end of contact form -->
         </section>
@@ -92,8 +93,14 @@
         <div class="resume-btn-shell">
           <h3></h3>
           <img src="../images/mike-square.jpg" alt="Picture of mike vibert">
-          <button class="green-text-bg-none">Download Resume</button>
-          <p>Ramps yes plz hella praxis pop-up man bun messenger bag vegan pitchfork. Palo santo fixie typewriter, authentic craft beer praxis iPhone edison bulb</p>
+          <a href="../images/Mock Resume.pdf" target="_blank"><button class="green-text-bg-none">Download Resume</button></a>
+          <p>I'm open to conversations about work opportunties, colaboration on projects and general chit chat on all things coding! Feel free to reach out via the contact form or by using the following details:</p>
+          <div>
+            <div>
+              <a href="mailto:13815@coderacademy.edu.au"><i class="fa fa-envelope fa-lg"></i></a>
+              <a href="mailto:13815@coderacademy.edu.au">13815@coderacademy.edu.au</a>
+            </div>
+          </div>
         </div>
       </div>
 
@@ -102,20 +109,20 @@
     <footer>
       <div class="social-links">
         <div>
-          <a href="/"><i class="fa fa-twitter fa-lg"></i></a>
+          <a href="https://twitter.com/vibert_michael"><i class="fa fa-twitter fa-lg"></i></a>
         </div>
         <div>
-          <a href="/"><i class="fa fa-github fa-lg"></i></a>
+          <a href="https://github.com/michael-vibert"><i class="fa fa-github fa-lg"></i></a>
         </div>
         <div>
-          <a href="/"><i class="fa fa-linkedin fa-lg"></i></a>
+          <a href="https://www.linkedin.com/in/michael-vibert-192b7713a/"><i class="fa fa-linkedin fa-lg"></i></a>
         </div>
         <div>
-          <a href="/"><i class="fa fa-facebook-f fa-lg"></i></a>
+          <a href="mailto:13815@coderacademy.edu.au"><i class="fa fa-envelope fa-lg"></i></a>
         </div>
       </div>
       <p>
-        MIKE VIBERT &copy <span style="color: #8D0B0B">2022</span>
+        MIKE VIBERT &copy <time style="color: #8D0B0B">2022</time>
       </p>
     </footer>   
   </body>
