--- a/index.html
+++ b/index.html
@@ -112,25 +112,25 @@
             
     
       </main>
-
-    <footer>
-      <div class="social-links">
-        <div>
-          <a href="/"><i class="fa fa-twitter fa-lg"></i></a>
+<!-- footer begins here, include my socials and a copywrite -->
+      <footer>
+        <div class="social-links">
+          <div>
+            <a href="https://twitter.com/vibert_michael"><i class="fa fa-twitter fa-lg"></i></a>
+          </div>
+          <div>
+            <a href="https://github.com/michael-vibert"><i class="fa fa-github fa-lg"></i></a>
+          </div>
+          <div>
+            <a href="https://www.linkedin.com/in/michael-vibert-192b7713a/"><i class="fa fa-linkedin fa-lg"></i></a>
+          </div>
+          <div>
+            <a href="mailto:13815@coderacademy.edu.au"><i class="fa fa-envelope fa-lg"></i></a>
+          </div>
         </div>
-        <div>
-          <a href="/"><i class="fa fa-github fa-lg"></i></a>
-        </div>
-        <div>
-          <a href="/"><i class="fa fa-linkedin fa-lg"></i></a>
-        </div>
-        <div>
-          <a href="/"><i class="fa fa-facebook-f fa-lg"></i></a>
-        </div>
-      </div>
-      <p>
-        MIKE VIBERT &copy <span style="color: #8D0B0B">2022</span>
-      </p>
-    </footer>   
+        <p>
+          MIKE VIBERT &copy <time style="color: #8D0B0B">2022</time>
+        </p>
+      </footer>   
   </body>
 </html>
