--- a/pages/OAuth-weaknesses.html
+++ b/pages/OAuth-weaknesses.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <!-- opening HTML element -->
 <html>
   <!-- head information containing metadata and links that reference to imported elements and stylesheets -->
@@ -16,8 +17,10 @@
     <link rel="stylesheet" href="/style/main.css"> <!-- link to my stylesheet in the style folder -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
+
 <!-- Body starts here - containing everything the user will see -->
   <body>
+
     <!-- header html with logo and the 2 main navigation lists and hamburger -->
     <header>
       <div class="header-shell">
@@ -60,15 +63,19 @@
         </div>
       </div>
   </header>
+
   <!-- Main section of the page -->
     <main>
+  <!-- div-2 starts here -->
       <div class="div-2">
+
         <!--page title and intro  -->
         <div class="blog-title">
           <h1 class="page-heading">Authentication Attack on Oauth</h1>
           <h5>Sept. 20<sup>th</sup> 2022</u></h5>
-          <div class="divider"></div>
         </div>
+
+        <!-- main text portion of page -->
         <section class="paragraphs">
           <!-- image supplied https://infosecwriteups.com/oauth-2-0-hacking-simplified-part-1-understanding-basics-ad323cb4a05c -->
           <img class="main-img" src="../images/oath-graphic.jpeg" alt="infographic for oath">
@@ -172,7 +179,8 @@
           </ul>
         </section>
       </div>
-      </main>
+  <!-- div-2 ends here -->
+</main>
 <!-- footer begins here, include my socials and a copywrite -->
       <footer>
         <div class="social-links">
