--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -34,6 +34,8 @@
               <line id="bottom" x1="12" y1="212" x2="338" y2="212" stroke="black" stroke-width="24" stroke-linecap="round"/>
             </svg>
           </label>
+
+          <!-- normally hidden sidebar menu section -->
           <nav class="sidebar-menu">
             <ul class="menu">
               <h2><label for="button-check">
@@ -61,7 +63,8 @@
       </div>
   </header>
   <!-- Main section of the page -->
-    <main>
+    <main id="about-me-content">
+
       <div class="intro-container">
         <!-- intro and title section -->
         <section class="welcome-txt" >
@@ -77,22 +80,24 @@
              back when I was building a WordPress site for my business in 2017.  I didn’t 
              realise it at the time but exploring the back end of the C-Panel was
               building my understanding of HTML and CSS.
-            </p>
+          </p>
         </article>
+        <!-- image section of myself racing a pushbike -->
         <div class="img-div">
           <img src="../images/Me-riding-bike.jpg" alt="Mike riding a bike in a race">
         </div>
-
       </div>
+
       <!-- second seciton of the page/white background -->
       <div class="div-2">
         <article class="text-two">
-          <p><b>
+          <p>
+            <b>
             Currently I’m studying Full Stack Web Development at Coder Academy. 
             Just prior to that I was studying Cyber Security at UNSW, Computer 
             Science at Monash and CyberSec/Networking at MIT.
-          </p></b>
-          <!-- <br> -->
+            </b>
+          </p>
           <p>
             In my previous life I was a practicing Chiropractor registered with 
             APRHA. After 8 years of serving the community and running my own 
@@ -100,6 +105,7 @@
             Tech. 
           </p>
         </article>
+        <!-- text area three including lists and paragraphs -->
         <article class="text-three">
           <p>My current fascinations include:</p>
           <div id="lists">
@@ -121,19 +127,22 @@
             And I also enjoy getting my hands dirty in home 
             DIY renovation madness! 
           </p>
-        </article>
-          
-        
+        </article>   
       </div>
-      <!-- button to take you to contact page -->
+<!-- end of div-2 -->
+
+<!-- button to take you to contact page -->
       <div class="cta">
         <a href="./contact.html">
           <button class="green-text-bg-none">Get in Touch</button>
         </a>
       </div>
-      </main>
+    </main>
+<!-- end of main content area -->
+
 <!-- footer begins here, include my socials and a copywrite -->
     <footer>
+      <!-- Social links -->
       <div class="social-links">
         <div>
           <a href="https://twitter.com/vibert_michael"><i class="fa fa-twitter fa-lg"></i></a>
@@ -153,5 +162,6 @@
       </p>
     </footer>    
   </body>
+<!-- End of visible content -->
 </html>
 <!-- End of html document -->
