--- a/pages/contact.html
+++ b/pages/contact.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <!-- opening HTML element -->
 <html>
+
   <!-- head information containing metadata and links that reference to imported elements and stylesheets -->
   <head>
     <meta charset="utf-8">
@@ -16,6 +17,7 @@
     <link rel="stylesheet" href="/style/main.css"> <!-- link to my stylesheet in the style folder -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   </head>
+
 <!-- Body starts here - containing everything the user will see -->
   <body>
     <!-- header html with logo and the 2 main navigation lists and hamburger -->
@@ -59,37 +61,39 @@
           </nav>
         </div>
       </div>
-  </header>
+    </header>
+
   <!-- Main section of the page -->
     <main>
+      
+      <!-- intro and title section -->
       <div class="intro-container">
-        <!-- intro and title section -->
         <section class="welcome-txt" >
           <p>Get in touch, I'd love to connect</p>
           <h1 id="name-headline"><big>Contact Me.</big></h1>
         </section>
       </div>
+
+  <!-- main content section of page -->
       <div class="main-content-shell">
+
         <!-- contact form starts here -->
         <section id="form-shell">
           <form action="/">
-  
             <div id="name-email-message-shell">
               <label for="name-input" id="name-label">Name:</label>
               <input type="text" id="name-input" placeholder="Enter your name..">
-  
               <label for="email-input" id="email-label">Email:</label>
               <input type="email" id="email-input" placeholder="Enter your contact email..">
-  
               <label for="message-input" id="message-label">Message:</label>
               <textarea id="message-input" placeholder="Write me a message :)"></textarea>
               <button type="submit">Submit</button>
             </div>
-            
           </form>
-  <!-- end of contact form -->
         </section>
+        <!-- end of contact form -->
   
+        <!-- resume download and contact information and picture -->
         <div class="resume-btn-shell">
           <h3></h3>
           <img src="../images/mike-square.jpg" alt="Picture of mike vibert">
@@ -104,7 +108,8 @@
         </div>
       </div>
 
-      </main>
+    </main>
+
 <!-- footer begins here, include my socials and a copywrite -->
     <footer>
       <div class="social-links">
