--- a/pages/projects.html
+++ b/pages/projects.html
@@ -61,7 +61,8 @@
           </nav>
         </div>
       </div>
-  </header>
+    </header>
+
   <!-- Main section of the page -->
     <main>
       <div class="intro-container">
@@ -72,11 +73,13 @@
           <p id="tagline">Let's get creative.<br>Check out some of my best work.</p>
         </section>
       </div>
+
 <!-- projects flexbox container starts here -->
       <div class="gallery-shell">
+
 <!-- Skate shop project mockup -->
         <div class="container">
-          <img src="../images/skate-shop.png" alt="" class="image">
+          <img src="../images/skate-shop.png" alt="Image of skater doing a jump down a street" class="image">
           <div class="overlay">
             <div class="text">
               <h2>Skate Shop</h2>
@@ -89,7 +92,7 @@
 <!-- Chat app project mock up -->
         <div class="container">
 
-          <img src="../images/chatapp.jpg" alt="" class="image">
+          <img src="../images/chatapp.jpg" alt="picture of a mobile phone screen on in a dark room" class="image">
           <div class="overlay">
             <div class="text">
               <h2>ChatApp</h2>
@@ -101,7 +104,7 @@
         </div>
 <!-- password manager project mockup -->
         <div class="container">
-          <img src="../images/pswd-mng.webp" alt="" class="image">
+          <img src="../images/pswd-mng.webp" alt="stylistic lock and key and diary/book" class="image">
           <div class="overlay">
             <div class="text">
               <h2>Password King</h2>
@@ -113,7 +116,7 @@
         </div>
 <!-- InstaTwit Social App project mockup -->
         <div class="container">
-          <img src="../images/insta-twit.jpg" alt="" class="image">
+          <img src="../images/insta-twit.jpg" alt="colorful picture of a camera and an instagram logo mixed with a twitter logo" class="image">
           <div class="overlay">
             <div class="text">
               <h2>InstaTwit</h2>
@@ -123,10 +126,11 @@
             </div>
           </div>
         </div>
-
       </div>
 <!-- projects flexbox container ends here -->
     </main>
+<!-- main section ends -->
+  
 <!-- footer begins here, include my socials and a copywrite -->
     <footer>
       <div class="social-links">
