--- a/pages/physical_auth_attack.html
+++ b/pages/physical_auth_attack.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+
 <!-- opening HTML element -->
 <html>
   <!-- head information containing metadata and links that reference to imported elements and stylesheets -->
@@ -59,10 +60,14 @@
           </nav>
         </div>
       </div>
-  </header>
+    </header>
+
   <!-- Main section of the page -->
     <main>
+
+    <!-- div-2 starts here -->
       <div class="div-2">
+
         <!--page title and intro  -->
         <div class="blog-title">
           <h1 class="page-heading">Physical Authentication Attack</h1>
@@ -72,6 +77,7 @@
         <section class="paragraphs">
           <!-- image supplied https://www.cyberark.com/resources/threat-research-blog/bypassing-windows-hello-without-masks-or-plastic-surgery -->
           <img class="main-img" src="../images/physauth.webp" alt="Cool picture of an eye and colourful lines">
+          
           <p>
             The Microsoft Hello authentication system is a biometric based authentication system that uses facial recognition to allow 
             user access to their personal computers. In 2021 there was a vulnerability discovered that 
@@ -143,7 +149,10 @@
           </ul>
         </section>
       </div>
+    <!-- div-2 ends here -->
       </main>
+  <!-- Main section ends -->
+
 <!-- footer begins here, include my socials and a copywrite -->
       <footer>
         <div class="social-links">
