README updated and sitemap included

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <section id="who-am-i">
             <div class="pic-shell">
               <section class="mike-pic-container">
-                <img src="./images/mike-square.jpg" alt="Picture of mick vibert">
+                <img src="./images/mike-square.jpg" alt="Picture of michael vibert">
               </section>
             </div>
             <!-- micro-introduction of myself -->
